2024-05-17 Konstantin Kushnir <chpock@gmail.com>
	* Add support for c-writerchannel. This removes the dependency on vfs::memchan and improves memory utilization/performance

2024-05-15 Konstantin Kushnir <chpock@gmail.com>
	* Refactor Tcl/C code
	* Add support for changecount subcommand for fsindex
	* Add support for import subcommand for fsindex (undocumented)

2024-05-10 Konstantin Kushnir <chpock@gmail.com>
	* Make pkgconfig.tcl file optional, implement it in C

2024-05-06 Konstantin Kushnir <chpock@gmail.com>
	* Bumped version to 1.6.0
	* Fix undefined behaviour

2024-05-05 Konstantin Kushnir <chpock@gmail.com>
	* RELEASE TAG 1.5.0

2024-05-04 Konstantin Kushnir <chpock@gmail.com>
	* Fix build error when c-pages is disabled
	* Use crc32 hash in tcl-pages by default. This removes the mandatory md5 package requirement.
	* Fix random test errors for cookfsVfs-1.9 because the file time is set to the current time and it will differ by a few seconds when the file is created
	* Optimize compiler/linker flags
	* Fix locked files during tests
	* Add a makefile recipe for generating documentation
	* Add a smart cache feature
	* Add README
	* Fix missing file pkgconfig.tcl

2024-05-03 Konstantin Kushnir <chpock@gmail.com>
	* Fix missed quotes in pages.test

2024-04-29 Konstantin Kushnir <chpock@gmail.com>
	* Don't install binaries before test/shell/gdb make recipes
	* Fix the make recipes test/shell/gdb
	* Add the make recipe 'package'
	* Make tests fail with an error on unsuccessful run
	* Detect tclsh correctly on Windows platform
	* Add Github workflow
	* Enable xz feature by default

2024-04-06 Konstantin Kushnir <chpock@gmail.com>
	* Add basic benchmarks
	* Add a function to fsindex to find out how many files are using a particular block

2024-04-01 Konstantin Kushnir <chpock@gmail.com>
	* Fix the build when xz is not enabled
	* Fix potential buffer overflow

2024-03-31 Konstantin Kushnir <chpock@gmail.com>
	* Search for cookfs index in the last 64k bytes of a file
